style/spelling clean up, use forked `node-wget-js` addressing vulnerabilities
in reference to  https://github.com/techno-express/node-7z/issues/10

`node-wget-js` will be rewritten to not use deprecated `request` module

--- a/.travis.yml
+++ b/.travis.yml
@@ -4,5 +4,5 @@ language: node_js
 sudo: required
 node_js:
   - '10'
-script: 'npm run coverage'
+script: 'npm run test'
 after_script: 'npm run coveralls'
