--- a/package.json
+++ b/package.json
@@ -5,7 +5,6 @@
     "main": "lib/index.js",
     "scripts": {
         "test": "mocha",
-        "coverage": "istanbul cover node_modules/mocha/bin/_mocha --dir .tmp/coverage",
         "coveralls": "npm install coveralls && cat .tmp/coverage/lcov.info | ./node_modules/coveralls/bin/coveralls.js",
         "install": "node installer.js"
     },
@@ -47,18 +46,17 @@
         "util"
     ],
     "dependencies": {
-        "when": "^3.7.8",
+        "all-unpacker": "^0.1.5",
         "cross-spawn": "^6.0.5",
-        "all-unpacker": "^0.1.3",
         "fs-extra": "^8.0.0",
         "macos-release": "^2.0.0",
-        "node-wget": "^0.4.2",
+        "node-wget-js": "^0.4.4",
         "retrying-promise": "^0.0.4",
-        "system-installer": "^1.1.0"
+        "system-installer": "^1.1.0",
+        "when": "^3.7.8"
     },
     "devDependencies": {
         "chai": "^4.1.2",
-        "istanbul": "^0.4.5",
         "mocha": "^6.2.0"
     }
 }
